fixing white space and slider

--- a/src/components/FeaturesFilter/FeaturesFilter.css
+++ b/src/components/FeaturesFilter/FeaturesFilter.css
@@ -41,7 +41,8 @@
     width: 93vw;
     display: flex;
     flex-direction: row;
-    overflow: hidden;
+    overflow-x: auto;
+    overflow-y: hidden;
   }
 
   .aa-filter::-webkit-scrollbar {
